crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@number_out_of_range.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/number_out_of_range.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "number_out_of_range.velme",
      "help": "Velme numbers keep up to 28 digits after the `.`",
      "labels": [],
      "message": "This number has too many decimal places.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 20,
        "end": 200,
        "line": 6,
        "start": 169
      }
    },
    {
      "code": "VL0101",
      "file": "number_out_of_range.velme",
      "help": "Velme numbers have at most 28 significant digits (up to 79228162514264337593543950335)",
      "labels": [],
      "message": "This number is too big.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 13,
        "end": 256,
        "line": 8,
        "start": 227
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
