crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@param_missing_type.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/param_missing_type.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "param_missing_type.velme",
      "help": "give `x` a type, like `x: Number`",
      "labels": [],
      "message": "I didn't expect `)` here — I was looking for `:`.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 9,
        "end": 100,
        "line": 3,
        "start": 99
      }
    },
    {
      "code": "VL0101",
      "file": "param_missing_type.velme",
      "labels": [],
      "message": "I didn't expect `result` here — I was looking for `)` or a name.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 8,
        "end": 140,
        "line": 6,
        "start": 134
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
