crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@postfix_bad.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/postfix_bad.velme
---
{
  "diagnostics": [
    {
      "code": "VL0101",
      "file": "postfix_bad.velme",
      "labels": [],
      "message": "I didn't expect `==` here — I was looking for a name.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 19,
        "end": 116,
        "line": 5,
        "start": 114
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
