crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@recursive_types.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/sema/reject/recursive_types.velme
---
{
  "diagnostics": [
    {
      "code": "VL0208",
      "file": "recursive_types.velme",
      "help": "store the related values in a separate list instead of inside each other",
      "labels": [
        {
          "span": {
            "column": 5,
            "end": 146,
            "line": 4,
            "start": 135
          },
          "text": "this field leads back to it"
        }
      ],
      "message": "`Node` contains itself, which Velme doesn't allow yet.",
      "notes": [
        "Node → Node"
      ],
      "severity": "error",
      "span": {
        "column": 6,
        "end": 111,
        "line": 2,
        "start": 107
      }
    },
    {
      "code": "VL0208",
      "file": "recursive_types.velme",
      "help": "store the related values in a separate list instead of inside each other",
      "labels": [
        {
          "span": {
            "column": 5,
            "end": 186,
            "line": 7,
            "start": 165
          },
          "text": "this field leads back to it"
        }
      ],
      "message": "`Parent` contains itself, which Velme doesn't allow yet.",
      "notes": [
        "Parent → Child → Parent"
      ],
      "severity": "error",
      "span": {
        "column": 6,
        "end": 159,
        "line": 6,
        "start": 153
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
