crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@tab_nested.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/tab_nested.velme
---
{
  "diagnostics": [
    {
      "code": "VL0103",
      "file": "tab_nested.velme",
      "help": "replace the tab with spaces",
      "labels": [],
      "message": "Please indent with spaces, not tabs.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 1,
        "end": 170,
        "line": 5,
        "start": 169
      }
    },
    {
      "code": "VL0103",
      "file": "tab_nested.velme",
      "help": "replace the tab with spaces",
      "labels": [],
      "message": "Please indent with spaces, not tabs.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 1,
        "end": 186,
        "line": 6,
        "start": 185
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
